[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-sidif"
authors = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  { name = "Wolfgang Fahl", email = "wf@bitplan.com" },
]
readme = "README.md"
license= "Apache-2.0"
dependencies = [
	# https://pypi.org/project/pyparsing/
	'pyparsing',
	#https://github.com/martinblech/xmltodict
	'xmltodict',
]

requires-python = ">=3.9"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version", "description"]
[tool.hatch.version]
path = "sidif/__init__.py"

[project.urls]
Home = "https://github.com/WolfgangFahl/py-sidif"
Documentation = "https://wiki.bitplan.com/index.php/Py-sidif"
Source = "https://github.com/WolfgangFahl/py-sidif"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
packages = [
  "sidif",
]
